# momd

./: .gitignore  CMakeLists.txt  README.md
config/: input.txt  installCatch.sh  paringSP.txt  run1.config  sp1.txt  sp40.txt
fci/: CMakeLists.txt
fci/inc/: TABit.h  TADiagonalize.h  TAHPairing.h  TAHamiltonian.h  TALanczos.h  TAMBSDTree.h  TAManyBodySD.h  TAManyBodySDList.h  TAManyBodySDManager.h  TAMatrix.h  TAMatrix.hpp  TASPState.h  TASPStateManager.h  TASingleParticleState.h  TASingleParticleStateManager.h  TASparseMatrix.h  TASparseVec.h  TATreeCol.h  vec_t.h  vec_t.hpp
fci/src/: TABit.cxx  TADiagonalize.cxx  TAFCI.cxx  TAHPairing.cxx  TAHamiltonian.cxx  TALanczos.cxx  TAMBSDTree.cxx  TAManyBodySD.cxx  TAManyBodySDList.cxx  TAManyBodySDManager.cxx  TASPState.cxx  TASPStateManager.cxx  TASingleParticleState.cxx  TASingleParticleStateManager.cxx  TASparseMatrix.cxx  TASparseVec.cxx  TATreeCol.cxx
momd/: CMakeLists.txt
momd/inc/: TABessel.h  TABound.h  TAComplex.h  TADiagonalize.h  TAEikonalPhase.h  TAEqSetSolver.h  TAEqSetSolver.hpp  TAException.h  TAFNN.h  TAFit.h  TAFourier.h  TAFun.h  TAHF.h  TAIntegral.h  TAIntegral.hpp  TAInterpolate.h  TAInterpolate.hpp  TALegendre.h  TAMOMDIS.h  TAMOMDIS_M.h  TAMath.h  TAMatrix.h  TAMinimize.h  TAMinimize.hpp  TAODESolver.h  TAOutput.h  TASMatrix.h  TASpheroidalHarmonics.h  TASymMatrix.h  TATest.h  TATwoPointODE.h
momd/src/: TABessel.cxx  TABound.cxx  TAComplex.cxx  TADiagonalize.cxx  TAEikonalPhase.cxx  TAException.cxx  TAFNN.cxx  TAFit.cxx  TAFourier.cxx  TAHF.cxx  TAIntegral.cxx  TAInterpolate.cxx  TALegendre.cxx  TAMOMDIS.cxx  TAMOMDIS_M.cxx  TAMath.cxx  TAMatrix.cxx  TAODESolver.cxx  TAOutput.cxx  TASMatrix.cxx  TASpheroidalHarmonics.cxx  TATest.cxx  TATwoPointODE.cxx
src/: CMakeLists.txt  hamiltonian.cxx  mbsd.cxx  test.cxx  testfci.cxx
